updated gradle and dockerfile