@@ -2,16 +2,22 @@ FROM eclipse-temurin:21-jdk AS build
 
 WORKDIR /app
 
-COPY . .
+COPY build.gradle.kts settings.gradle.kts gradlew ./
+COPY gradle ./gradle
 
-RUN ./gradlew clean build -x test
+RUN chmod +x gradlew
+
+RUN ./gradlew build -x test --dry-run
+
+COPY src ./src
+RUN ./gradlew clean fatJar -x test
 
 FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 
-COPY --from=build /app/build/libs/*.jar app.jar
+COPY --from=build /app/build/libs/*-all.jar app.jar
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "--enable-preview", "-jar", "app.jar"]
